# SummitSphere

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
summit_sphere/: asgi.py  urls.py  wsgi.py
summit_sphere/badges/: admin.py  apps.py  models.py
summit_sphere/badges/fixtures/: initial_badges.json
summit_sphere/badges/migrations/: 0001_initial.py
summit_sphere/commons/: admin.py  models.py  serializers.py
summit_sphere/frontend/: package-lock.json  package.json
summit_sphere/frontend/public/: index.html
summit_sphere/frontend/src/: App.js  index.js  styles.css  theme.js
summit_sphere/frontend/src/components/: DrawerNavbar.jsx  Navbar.jsx
summit_sphere/frontend/src/dev/: README.md
summit_sphere/frontend/src/pages/: MapPage.jsx
summit_sphere/peaks/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
summit_sphere/peaks/fixtures/: initial_peaks.json  initial_regions.json
summit_sphere/peaks/migrations/: 0001_initial.py  0002_region_alter_peak_options_peak_region.py  0003_alter_region_options_alter_peak_country_code.py  0004_alter_peak_unicode_name.py  0005_peak_description_visit.py
summit_sphere/settings/: base.py  local.py  production.py
summit_sphere/tests/: conftest.py
summit_sphere/tests/test_peaks/: conftest.py  factories.py  test_serializers.py  test_views.py
summit_sphere/users/: apps.py  managers.py  models.py
summit_sphere/users/migrations/: 0001_initial.py
summit_sphere/users/tests/: test_managers.py
